--- a/server/views/detail.css
+++ b/server/views/detail.css
@@ -2,14 +2,9 @@
   display: grid;
   grid-template-columns: 1.6fr 1fr;
   grid-template-rows: 90dvh;
-  grid-template-areas: "detail" "relations";
   gap: 2rem;
 
-  /* tijdelijk tot er een beter oplossing gevonden kan worden met grid */
-  /* margin-inline: max(1.5rem,((100%-75rem)/2)); */
-  /* background-color: aquamarine; */
   width: min(100% - 4rem, 90rem);
-  /* width: max(75%); */
   margin-inline: auto;
 
 
@@ -21,16 +16,16 @@
       font-size: 1.5em;
     }
 
-    ul {
+    & > ul {
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      /* height: 85.7vh; */
+
       max-height: 90dvh;
       overflow-y: scroll;
 
       scrollbar-width: thin;
-      scrollbar-color: #F9F6EE black;
+      scrollbar-color: var(--color-title) var(--color-background);
     }
   }
 }
